@@ -256,9 +256,7 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
   error_no_category_access      "You do not have edit access to $url (ID: $cat_id)"
   error_no_filename             "Please choose an element or insert a filename."
   error_invalid_filename	"Please specify a valid filename ending with .tmpl"
-  message_add_cancelled		"Add template cancelled."
   message_deleted		"Template deleted."
-  message_edit_cancelled	"Edit template cancelled."
   message_revert_version	"Template reverted to version '$version'."
   message_saved			"Template saved."
   checkin_template              "Saved and Checked In template $id."
